--- a/src/sample/controller/Principal.fxml
+++ b/src/sample/controller/Principal.fxml
@@ -11,5 +11,6 @@
       <TextField fx:id="txtN2" layoutX="231.0" layoutY="112.0" prefHeight="42.0" prefWidth="67.0" />
       <TextField fx:id="txtN3" layoutX="391.0" layoutY="112.0" prefHeight="42.0" prefWidth="67.0" />
       <Button layoutX="679.0" layoutY="112.0" mnemonicParsing="false" onAction="#validarCampos" prefHeight="42.0" prefWidth="76.0" text="Reproducir" />
+      <Button layoutX="679.0" layoutY="544.0" mnemonicParsing="false" onAction="#salir" prefHeight="42.0" prefWidth="76.0" text="Salir" />
    </children>
 </AnchorPane>
